implemented npm-run-all bug workaround to run tests correctly with npx

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-restaurant-reservation-back-end",
+  "name": "reservation-system-back-end",
   "version": "1.0.0",
-  "description": "Starter code for restaurant reservation backend",
+  "description": "Capstone project based on starter code for restaurant reservation backend",
   "main": "src/server.js",
   "repository": {
     "type": "git",
